# streaming

./: Dockerfile  README.md  docker-compose.yaml  flink-config.yaml  pyproject.flink.toml  pyproject.toml  requirements.txt
lab/: bank-instructions.md  lab-instructions.md  toll-instructions.md
lab/bank/: admin.py  new_producer.py  producer.py
lab/toll/: streaming-data-reader.py  toll_traffic_generator.py
src/: consumer.py  main.py  producer.py  producer_realtime.py  test_connection.py
src/job/: aggregate_tip_job.py  aggregation_job.py  green_trip_aggregation_job.py  pass_through_job.py  window_session_job.py
src/sql/: scripts.sql
src/taxi/: consumer.py  producer.py
src/toll/: streaming-data-reader.py  toll_traffic_generator.py
src/utils/: models.py  postgres_db.py
