[project]
name = "streaming"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "kafka-python>=2.3.0",
    "pandas>=3.0.1",
    "pgcli>=4.4.0",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "tqdm>=4.67.3",
]
